--- a/ONtime/public_html/ProductDetails.html
+++ b/ONtime/public_html/ProductDetails.html
@@ -7,116 +7,223 @@ and open the template in the editor.
 <html>
 
 <head>
-        <title>Product Details</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="css/bootstrap.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="css/main.css" type="text/css"/>
-        <script
-            src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
-        </script>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    </head>
+    <title>Customer Service - OnTime</title>
+    <meta name="description" content="ONtime - Top Seller & Best Quality Services on watches">
+    <meta name="keywords"
+        content="Watches, Watch, Strap, Minute, Second, Buying, Selling, Discount, Offer, Fix, Repair, Maintenance, New Arrivals, Gshock, Fossil, Tag Heuer, Fashion, Hand Accessory, Second Hand, Time, Time Keeper, Pocket Watch, Rolex">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/productDetails.css" rel="stylesheet" type="text/css">
+    <link href="css/headerFooter.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+</head>
 
-    <body>
-        <!----------------------   Single Product Carousel   ------------------------------------------>
-        <article class = "singleProduct">
-            <section class="container">
-                <section class =row>
-                    <section class="col-md-5">
+<body>
+    <nav class="navbar navbar-custom navbar-fixed-top navbar-inverse">
+        <div id="topnav-centered">
+            <a class="navbar-brand" href="index.html"><img src="images\logo3.png" alt="Ontime logo"
+                    style="width:150px;height:60px;" /></a>
+        </div>
 
-                        <!--   Slider Carousel  -->
-                        <section>
-                            <div class="container-fluid">
-                                <div id="product-slider" class="carousel slide" data-ride="carousel">
+        <section class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </section>
 
-                                    <!-- Wrapper for slides -->
-                                    <div class="carousel-inner">
-                                        <figure class="carousel-item active">
-                                            <img src="img/WatchM1.jpg" alt="Buring Watch "  class="d-block w-100" >
-                                        </figure>
-                                        <figure class="carousel-item">
-                                            <img src="img/WatchM2.jpg" alt="Buring Watch" class="d-block w-100" >
-                                        </figure>
-                                        <figure class="carousel-item">
-                                            <img src="img/WatchM3.jpg" alt="Timberland Watch" class="d-block w-100" >
-                                        </figure>
-                                        <figure class="carousel-item">
-                                            <img src="img/WatchM4.jpg" alt="Timberland Watch" class="d-block w-100" >
-                                        </figure>
-                                        <figure class="carousel-item">
-                                            <img src="img/WatchF1.jpg" alt=" Oliva Burton Watch" class="d-block w-100" >
-                                        </figure>
-                                        <figure class="carousel-item">
-                                            <img src="img/WatchF2.jpg" alt="Paul Hewitt Watch" class="d-block w-100" >
-                                        </figure>
-                                        <figure class="carousel-item">
-                                            <img src="img/WatchF3.jpg" alt="Paul Hewitt Watch" class="d-block w-100" >
-                                        </figure>
+        <section class="collapse navbar-collapse container-fluid" id="myNavbar">
 
-                                    </div>
-                                    <!-- Left and right controls -->
-                                    <a class="left carousel-control" href="#product-slider" data-slide="prev">
-                                        <i class="glyphicon glyphicon-chevron-left"></i>
-                                        <i class="sr-only">Previous</i>
-                                    </a>
-                                    <a class="right carousel-control" href="#product-slider" data-slide="next">
-                                        <i class="glyphicon glyphicon-chevron-right"></i>
-                                        <i class="sr-only">Next</i>
-                                    </a>
-                                </div>
-                            </div>
-                        </section>
+            <ul class="nav navbar-nav">
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Products <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="products.html#hot">Top selling</a></li>
+                        <li><a href="products.html#newarr">Newest</a></li>
+                        <li><a href="products.html">All</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Customer service<span
+                            class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="customerservice.html#Maintenance">Maintainence</a></li>
+                        <li><a href="customerservice.html#FAQ">Faq</a></li>
+                    </ul>
+                </li>
+                <li><a href="productsreview.html">Reviews</a></li>
+                <li><a href="aboutus.html">About us</a></li>
+            </ul>
 
-                        <section class="col-md-7">
-                            <p class="new-arrival text-center">NEW</p>
-                            <h2>Men and Women's Watches</h2>
-                            <p>Product Code: A12345Z </p> 
-                            <figure class="star-rating">
-                                <span class="fa fa-star" data-rating="1"></span>
-                                <span class="fa fa-star" data-rating="2"></span>
-                                <span class="fa fa-star" data-rating="3"></span>
-                                <span class="fa fa-star" data-rating="4"></span>
-                                <span class="fa fa-star-half-o" data-rating="5"></span>
-                            </figure> 
-                            <p class="price">SGD $40.00 </p>
-                            <p><b>Availability</b> In Stock </p>
-                            <p><b>Condition</b> New </p>
-                            <p><b>Brand</b> ABC.Co </p>
-                            <label>Quantity: </label>
-                            <input type="text" value="">
-                            <button type ="button" class="btn btn-primary"> Add to Cart</button>
-                        </section>
-                    </section>    
 
-                    <section class="productDescription">
-                        <section class="container">
-                            <h3>Product Description</h3>
-                            <p>This  is the Product Description LOL. This  is the Product Description LOL.This  is the Product Description LOLThis  is the Product Description LOL
-                                This  is the Product Description LOLThis  is the Product Description LOLThis  is the Product Description LOLThis  is the Product Description LOLThis  is the Product 
-                                Description LOL</p>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="shoppingcart.html"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
+                <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+            </ul>
+        </section>
+    </nav>
 
-                            <p>This  is the Product Description LOL. This  is the Product Description LOL.This  is the Product Description LOLThis  is the Product Description LOL
-                                This  is the Product Description LOLThis  is the Product Description LOLThis  is the Product Description LOLThis  is the Product Description LOLThis  is the Product 
-                                Description LOL</p>
 
-                            <hr/>
-                        </section>
-                    </section>
+
+    <!-- Bootstrap Carousel  W3school  URL = https://www.w3schools.com/bootstrap/bootstrap_carousel.asp  
+        all images source from Cocomi.com URL = https://www.cocomi.com/
+        how to make a single product ecommerce URL https://www.youtube.com/watch?v=4zGBRBHsgEY Author= Easy Tutorial (Youtube Channel)-->
+
+    <article class="singleProduct">
+        <section class="container">
+            <section class=row>
+                <div class="col-md-5">
+                    <div id="product-slider" class="carousel slide" data-ride="carousel">
+
+                        <!-- Indicators -->
+                        <ol class="carousel-indicators">
+                            <li data-target="#product-slider" data-slide-to="0" class="active"></li>
+                            <li data-target="#product-slider" data-slide-to="1"></li>
+                            <li data-target="#product-slider" data-slide-to="2"></li>
+                            <li data-target="#product-slider" data-slide-to="3"></li>
+                            <li data-target="#product-slider" data-slide-to="4"></li>
+                            <li data-target="#product-slider" data-slide-to="5"></li>
+                            <li data-target="#product-slider" data-slide-to="6"></li>
+                            <li data-target="#product-slider" data-slide-to="7"></li>
+                            <li data-target="#product-slider" data-slide-to="8"></li>
+                        </ol>
+
+                        <!-- Wrapper for slides -->
+                        <div class="carousel-inner">
+                            <figure class="item active">
+                                <img src="img/WatchF1.jpg" alt="Buring Classic Blue Men's Watch">
+                            </figure>
+
+                            <figure class="item">
+                                <img src="img/WatchF2.jpg" alt="Buring Classic White Men's Watch">
+                            </figure>
+                            <figure class="item">
+                                <img src="img/WatchF3.jpg" alt="Timberland Ashland Men's Watch">
+                            </figure>
+                            <figure class="item">
+                                <img src="img/WatchF4.jpg" alt="Timberland Biddeford Men's Watch">
+                            </figure>
+                            <figure class="item">
+                                <img src="img/WatchM1.jpg" alt="Olivia Burton British Blooms Rose Women's Watch">
+                            </figure>
+                            <figure class="item">
+                                <img src="img/WatchM2.jpg" alt="Olivia Burton British Blooms Silver Women's Watch">
+                            </figure>
+                            <figure class="item">
+                                <img src="img/WatchM3.jpg" alt="Paul Hewitt Sailor Line Modest Black">
+                            </figure>
+                            <figure class="item">
+                                <img src="img/WatchM4.jpg" alt="Paul Hewitt Miss Ocean Line Holo Silver Women's Watch">
+                            </figure>
+                        </div>
+                        <!-- Left and right controls -->
+                        <a class="left carousel-control" href="#product-slider" data-slide="prev">
+                            <i class="glyphicon glyphicon-chevron-left"></i>
+                            <i class="sr-only">Previous</i>
+                        </a>
+                        <a class="right carousel-control" href="#product-slider" data-slide="next">
+                            <i class="glyphicon glyphicon-chevron-right"></i>
+                            <i class="sr-only">Next</i>
+                        </a>
+                    </div>
+                </div>
+
+
+                <div class="col-md-7">
+                    <p class="new-arrival text-center">NEW</p>
+                    <h2>Men and Women's Watches</h2>
+                    <p>Product Code: A12345Z </p>
+                    <figure class="star-rating">
+                        <span class="fa fa-star" data-rating="1"></span>
+                        <span class="fa fa-star" data-rating="2"></span>
+                        <span class="fa fa-star" data-rating="3"></span>
+                        <span class="fa fa-star" data-rating="4"></span>
+                        <span class="fa fa-star-half-o" data-rating="5"></span>
+                    </figure>
+                    <p class="price">SGD $40.00 </p>
+                    <p><b>Availability</b> In Stock </p>
+                    <p><b>Condition</b> New </p>
+                    <p><b>Brand</b> ABC.Co </p>
+                    <label>Quantity: </label>
+                    <input type="text" value="">
+                    <button type="button" class="btn btn-primary"> Add to Cart</button>
+                </div>
+            </section>
+
+            <section class="productDescription">
+                <section class="container">
+                    <h3>Product Description</h3>
+                    <p>This is the Product Description . This is the Product Description .This is the Product
+                        Description This is the Product Description
+                        This is the Product Description LOLThis is the Product Description This is the Product
+                        Description This is the Product Description LOLThis is the Product
+                        Description</p>
+
+                    <p>This is the Product Description . This is the Product Description .This is the Product
+                        Description This is the Product Description
+                        This is the Product Description This is the Product Description This is the Product
+                        Description This is the Product Description LOLThis is the Product
+                        Description </p>
+
+                    <hr />
                 </section>
-        </article>
+            </section>
+        </section>
+    </article>
 
-        <nav class="container-fluid navbar-fixed-bottom footer foot text-center">
-            <a href="ProductPage.html">Home |</a>
-            <a href="">Browse |</a>
-            <a href="">Search </a>
-            <p><i>Copyright &copy; 2014 Share Your Travel</i></p>
-        </nav>
-    </body>
+    <!-- Bootstrap Carousel  W3school  URL = https://www.w3schools.com/bootstrap/bootstrap_carousel.asp  
+        all images source from Cocomi.com URL = https://www.cocomi.com/
+        how to make a single product ecommerce URL https://www.youtube.com/watch?v=4zGBRBHsgEY Author= Easy Tutorial (Youtube Channel)-->
+
+    <footer class="footer">
+        <section class=container>
+            <section class="row">
+                <section class="col-md-4">
+                    <h1>Company</h1>
+                    <a href="aboutus.html">
+                        <p>About Us</p>
+                    </a>
+                    <a href="aboutus.html">
+                        <p>Contact Us</p>
+                    </a>
+                </section>
+
+                <section class="col-md-4">
+                    <h1>Customer Support</h1>
+                    <a href="customerservice.html#FAQ">
+                        <p>FAQ</p>
+                    </a>
+                    <a href="customerservice.html">
+                        <p>Customer Service</p>
+                    </a>
+                </section>
+
+                <section class="col-md-4">
+                    <h1>Follow Us On</h1>
+                    <a href="https://www.facebook.com/">
+                        <p><i class="fa fa-facebook-official"></i> Facebook</p>
+                    </a>
+                    <a href="https://www.youtube.com/">
+                        <p><i class="fa fa-youtube-play"></i> Youtube</p>
+                    </a>
+                    <a href="https://www.linkedin.com/">
+                        <p><i class="fa fa-linkedin"></i> LinkedIn</p>
+                    </a>
+                    <a href="https://twitter.com/">
+                        <p><i class="fa fa-twitter"></i> Twitter</p>
+                    </a>
+                </section>
+
+            </section>
+            <hr />
+            <p class="copyright">Copyright &copy; 2019 <i class="fa fa-heart-o"></i> ONTime</p>
+        </section>
+    </footer>
+</body>
