--- a/ONtime/public_html/aboutus.html
+++ b/ONtime/public_html/aboutus.html
@@ -180,7 +180,8 @@ and open the template in the editor.
                     <a href="aboutus.html">
                         <p>About Us</p>
                     </a>
-                    <a href=""><p>Contact Us</p>
+                    <a href="aboutus.html">
+                        <p>Contact Us</p>
                     </a>
                 </section>
 
@@ -188,9 +189,6 @@ and open the template in the editor.
                     <h1>Customer Support</h1>
                     <a href="customerservice.html#FAQ">
                         <p>FAQ</p>
-                    </a>
-                    <a href="">
-                        <p>Contact Us</p>
                     </a>
                     <a href="customerservice.html">
                         <p>Customer Service</p>
