--- a/ONtime/public_html/checkout.html
+++ b/ONtime/public_html/checkout.html
@@ -121,7 +121,8 @@
                     <a href="aboutus.html">
                         <p>About Us</p>
                     </a>
-                    <a href=""><p>Contact Us</p>
+                    <a href="aboutus.html">
+                        <p>Contact Us</p>
                     </a>
                 </section>
 
@@ -129,9 +130,6 @@
                     <h1>Customer Support</h1>
                     <a href="customerservice.html#FAQ">
                         <p>FAQ</p>
-                    </a>
-                    <a href="">
-                        <p>Contact Us</p>
                     </a>
                     <a href="customerservice.html">
                         <p>Customer Service</p>
