--- a/ONtime/public_html/login.html
+++ b/ONtime/public_html/login.html
@@ -120,30 +120,30 @@
         </div>
     </main>
 
-    <footer class="footer">
-        <div class=container>
-            <div class="row">
-                <div class="col-md-4">
+    <footer class="footer" id="footer">
+        <section class=container>
+            <section class="row">
+                <section class="col-md-4">
                     <h1>Company</h1>
                     <a href="aboutus.html">
                         <p>About Us</p>
                     </a>
-                    <a href=""><p>Contact Us</p>
+                    <a href="aboutus.html">
+                        <p>Contact Us</p>
                     </a>
-                    </section>
-                    <section class="col-md-4">
-                        <h1>Customer Support</h1>
-                        <a href="customerservice.html#FAQ">
-                            <p>FAQ</p>
-                        </a>
-                        <a href="">
-                            <p>Contact Us</p>
-                        </a>
-                        <a href="customerservice.html">
-                                <p>Customer Service</p>
-                            </a>
-                </div>
-                <div class="col-md-4">
+                </section>
+
+                <section class="col-md-4">
+                    <h1>Customer Support</h1>
+                    <a href="customerservice.html#FAQ">
+                        <p>FAQ</p>
+                    </a>
+                    <a href="customerservice.html">
+                        <p>Customer Service</p>
+                    </a>
+                </section>
+
+                <section class="col-md-4">
                     <h1>Follow Us On</h1>
                     <a href="https://www.facebook.com/">
                         <p><i class="fa fa-facebook-official"></i> Facebook</p>
@@ -157,11 +157,12 @@
                     <a href="https://twitter.com/">
                         <p><i class="fa fa-twitter"></i> Twitter</p>
                     </a>
-                </div>
-            </div>
+                </section>
+
+            </section>
             <hr />
             <p class="copyright">Copyright &copy; 2019 <i class="fa fa-heart-o"></i> ONTime</p>
-        </div>
+        </section>
     </footer>
 </body>
 
