--- a/ONtime/public_html/shoppingcart.html
+++ b/ONtime/public_html/shoppingcart.html
@@ -193,7 +193,8 @@
                     <a href="aboutus.html">
                         <p>About Us</p>
                     </a>
-                    <a href=""><p>Contact Us</p>
+                    <a href="aboutus.html">
+                        <p>Contact Us</p>
                     </a>
                 </section>
 
@@ -201,9 +202,6 @@
                     <h1>Customer Support</h1>
                     <a href="customerservice.html#FAQ">
                         <p>FAQ</p>
-                    </a>
-                    <a href="">
-                        <p>Contact Us</p>
                     </a>
                     <a href="customerservice.html">
                         <p>Customer Service</p>
@@ -231,7 +229,6 @@
             <p class="copyright">Copyright &copy; 2019 <i class="fa fa-heart-o"></i> ONTime</p>
         </section>
     </footer>
-
 
 </body>
 
