--- a/ONtime/public_html/customerservice.html
+++ b/ONtime/public_html/customerservice.html
@@ -222,7 +222,7 @@
                         <a href="aboutus.html">
                             <p>About Us</p>
                         </a>
-                        <a href=""><p>Contact Us</p>
+                        <a href="aboutus.html"><p>Contact Us</p>
                         </a>
                     </section>
 
@@ -230,9 +230,6 @@
                         <h1>Customer Support</h1>
                         <a href="customerservice.html#FAQ">
                             <p>FAQ</p>
-                        </a>
-                        <a href="">
-                            <p>Contact Us</p>
                         </a>
                         <a href="customerservice.html">
                             <p>Customer Service</p>
