--- a/ONtime/public_html/products.html
+++ b/ONtime/public_html/products.html
@@ -74,7 +74,7 @@ and open the template in the editor.
     </nav>
 
 
-    <!--   Slider Carousel   -->
+    <!-- Bootstrap Carousel  W3school  URL = https://www.w3schools.com/bootstrap/bootstrap_carousel.asp-->
     <section>
         <div class="container-fluid">
             <div id="slider" class="carousel slide" data-ride="carousel">
@@ -108,21 +108,24 @@ and open the template in the editor.
         </div>
     </section>
 
+    <!-- Bootstrap Carousel  W3school  URL = https://www.w3schools.com/bootstrap/bootstrap_carousel.asp -->
 
-    <main class="container-fluid">
+    <main class="container-fluid" id="hot">
 
-        <div class="container">
+        <section class="container-fluid">
             <section class="title-box">
-                <h2> New Arrival</h2>
+                <h2> Top Selling </h2>
             </section>
-        </div>
+        </section>
 
+    <!--Product Card  W3school URL https://www.w3schools.com/howto/howto_css_product_card.asp  
+        all images source from Cocomi.com URL = https://www.cocomi.com/ -->
         <div class="row">
-
+         
             <div class="col-md-3">
 
                 <figure class="card">
-                    <a href="ProductDetails.html"><img src="img/WatchM1.jpg" alt="Male Watch 1"></a>
+                    <a href="ProductDetails.html"><img src="img/WatchM1.jpg" alt="Buring Classic Blue Men's Watch"></a>
                     <h1>Male Watch 1</h1>
                     <p class="price">$19.99</p>
                     <p>Some text about the watch..</p>
@@ -148,7 +151,7 @@ and open the template in the editor.
 
             <div class="col-md-3">
                 <figure class="card">
-                    <a href="ProductDetails.html"><img src="img/WatchM2.jpg" alt="Male Watch 2"></a>
+                    <a href="ProductDetails.html"><img src="img/WatchM2.jpg" alt="Buring Classic White Men's Watch"></a>
                     <h1>Male Watch 2</h1>
                     <p class="price">$19.99</p>
                     <p>Some text about the watch..</p>
@@ -172,7 +175,7 @@ and open the template in the editor.
             </div>
             <div class="col-md-3">
                 <figure class="card">
-                    <a href="ProductDetails.html"><img src="img/WatchM3.jpg" alt="Male Watch 3"></a>
+                    <a href="ProductDetails.html"><img src="img/WatchM3.jpg" alt="Timberland Ashland Men's Watch"></a>
                     <h1>Male Watch 3</h1>
                     <p class="price">$19.99</p>
                     <p>Some text about the watch..</p>
@@ -196,7 +199,7 @@ and open the template in the editor.
             </div>
             <div class="col-md-3">
                 <figure class="card">
-                    <a href="ProductDetails.html"><img src="img/WatchM4.jpg" alt="Male Watch 4"></a>
+                    <a href="ProductDetails.html"><img src="img/WatchM4.jpg" alt="Timberland Biddeford Men's Watch"></a>
 
                     <h1>Male Watch 4</h1>
                     <p class="price">$19.99</p>
@@ -221,15 +224,15 @@ and open the template in the editor.
             </div>
         </div>
 
-        <div class="container">
+        <div class="container-fluid" id="newarr">
             <div class="title-box">
-                <h2> Hot </h2>
+                <h2> Newest </h2>
             </div>
         </div>
 
         <div class="col-md-3">
             <figure class="card">
-                <a href="ProductDetails.html"><img src="img/WatchF1.jpg" alt="Female Watch 1"></a>
+                <a href="ProductDetails.html"><img src="img/WatchF1.jpg" alt="Olivia Burton British Blooms Rose Women's Watch"></a>
                 <h1>Female Watch 1</h1>
                 <p class="price">$19.99</p>
                 <p>Some text about the watch..</p>
@@ -253,7 +256,7 @@ and open the template in the editor.
 
         <div class="col-md-3">
             <figure class="card">
-                <a href="ProductDetails.html"><img src="img/WatchF2.jpg" alt="Female Watch 2"></a>
+                <a href="ProductDetails.html"><img src="img/WatchF2.jpg" alt="Olivia Burton British Blooms Silver Women's Watch"></a>
                 <h1>Female Watch 2</h1>
                 <p class="price">$19.99</p>
                 <p>Some text about the watch..</p>
@@ -277,7 +280,7 @@ and open the template in the editor.
 
         <div class="col-md-3">
             <figure class="card">
-                <a href="ProductDetails.html"><img src="img/WatchF3.jpg" alt="Female Watch 3"></a>
+                <a href="ProductDetails.html"><img src="img/WatchF3.jpg" alt="Paul Hewitt Sailor Line Modest Black"></a>
                 <h1>Female Watch 3</h1>
                 <p class="price">$19.99</p>
                 <p>Some text about the watch..</p>
@@ -301,7 +304,7 @@ and open the template in the editor.
 
         <div class="col-md-3">
             <figure class="card">
-                <a href="ProductDetails.html"><img src="img/WatchF4.jpg" alt="Female Watch 4"></a>
+                <a href="ProductDetails.html"><img src="img/WatchF4.jpg" alt="Paul Hewitt Miss Ocean Line Holo Silver Women's Watch"></a>
                 <h1>Female Watch 4</h1>
                 <p class="price">$19.99</p>
                 <p>Some text about the watch..</p>
@@ -321,34 +324,35 @@ and open the template in the editor.
                     <i class="fa fa-star" data-rating="5"></i>
                 </figure>
         </div>
-
+     <!--Product Card  W3school URL https://www.w3schools.com/howto/howto_css_product_card.asp  
+        all images source from Cocomi.com URL = https://www.cocomi.com/ -->
     </main>
     <hr />
 
     <footer class="footer">
-        <div class=container>
-            <div class="row">
-
-                <div class="col-md-4">
+        <section class=container>
+            <section class="row">
+                <section class="col-md-4">
                     <h1>Company</h1>
-                    <p>About Us</p>
-                    <p>Contact Us</p>
-                </div>
-
-                <div class="col-md-4">
-                    <h1>Customer Support</h1>
-                    <a href="">
-                        <p>FAQ</p>
+                    <a href="aboutus.html">
+                        <p>About Us</p>
                     </a>
-                    <a href="">
+                    <a href="aboutus.html">
                         <p>Contact Us</p>
                     </a>
-                    <a href="">
+                </section>
+
+                <section class="col-md-4">
+                    <h1>Customer Support</h1>
+                    <a href="customerservice.html#FAQ">
+                        <p>FAQ</p>
+                    </a>
+                    <a href="customerservice.html">
                         <p>Customer Service</p>
                     </a>
-                </div>
+                </section>
 
-                <div class="col-md-4">
+                <section class="col-md-4">
                     <h1>Follow Us On</h1>
                     <a href="https://www.facebook.com/">
                         <p><i class="fa fa-facebook-official"></i> Facebook</p>
@@ -362,11 +366,12 @@ and open the template in the editor.
                     <a href="https://twitter.com/">
                         <p><i class="fa fa-twitter"></i> Twitter</p>
                     </a>
-                </div>
-            </div>
+                </section>
+
+            </section>
             <hr />
             <p class="copyright">Copyright &copy; 2019 <i class="fa fa-heart-o"></i> ONTime</p>
-        </div>
+        </section>
     </footer>
 </body>
 
