--- a/ONtime/public_html/productsreview.html
+++ b/ONtime/public_html/productsreview.html
@@ -13,7 +13,7 @@ and open the template in the editor.
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/reviews.css" type="text/css" />
     <link rel="stylesheet" href="css/headerFooter.css" type="text/css" />
-    <script scr= "js/productReview.js"></script>
+    <script src="js/productreview.js"> </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
     </script>
     <script src="js/bootstrap.min.js">
@@ -78,13 +78,13 @@ and open the template in the editor.
         <p class="text-center">We value every comments you provide!</p>
 
         <section>
-            <div class="container" id="productReview">
+            <div class="container" id="productreview">
                 <!--Responsive Form CSS - https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_responsive_form -->
-                <form name="productReview" action="Reviewpage.html" method="post" onsubmit="return validateform()">
+                <form name="productreview" action="productsreview.html" method="post" onsubmit="return validateform()">
 
                     <div class="row">
                         <div class="col-25">
-                            <label for="question">Review</label>
+                            <label for="review">Review</label>
                         </div>
                         <div class="col-75">
                             <textarea id="review" name="review" placeholder="Write your reviews.."></textarea>
@@ -103,56 +103,10 @@ and open the template in the editor.
         <section class="container">
             <div class="row">
                 <div class="col-md-4 text-center">
-                    <figure class="profile">
-                        <img src="img/femaleicon.jpg " alt="femaleicon" class="user">
-                        <blockquote>WATCH watch watch watches, etc...........</blockquote>
-                        <figure class="star-rating">
-                            <i class="fa fa-star" data-rating="1"></i>
-                            <i class="fa fa-star" data-rating="2"></i>
-                            <i class="fa fa-star" data-rating="3"></i>
-                            <i class="fa fa-star" data-rating="4"></i>
-                            <i class="fa fa-star-o" data-rating="5"></i>
-                        </figure>
-                        <h2>Aaron <span>Co-Founder of OnTime </span></h2>
-                    </figure>
-                </div>
 
-                <div class="col-md-4 text-center">
                     <figure class="profile">
-                        <img src="img/femaleicon.jpg" class="user">
-                        <blockquote>WATCH watch watch watches, etc..</blockquote>
-                        <figure class="star-rating">
-                            <i class="fa fa-star" data-rating="1"></i>
-                            <i class="fa fa-star" data-rating="2"></i>
-                            <i class="fa fa-star" data-rating="3"></i>
-                            <i class="fa fa-star" data-rating="4"></i>
-                            <i class="fa fa-star-o" data-rating="5"></i>
-                        </figure>
-                        <h2>Aaron <span>Co-Founder of OnTime </span></h2>
-                    </figure>
-                </div>
-
-                <div class="col-md-4 text-center">
-                    <figure class="profile">
-                        <img src="img/maleicon.jpg " class="user">
-                        <blockquote>WATCH watch watch watches, etc............</blockquote>
-                        <figure class="star-rating">
-                            <span class="fa fa-star" data-rating="1"></span>
-                            <span class="fa fa-star" data-rating="2"></span>
-                            <span class="fa fa-star" data-rating="3"></span>
-                            <span class="fa fa-star" data-rating="4"></span>
-                            <span class="fa fa-star-half-o" data-rating="5"></span>
-                        </figure>
-                        <h2>Aaron <span>Co-Founder of OnTime </span></h2>
-                    </figure>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-4 text-center">
-                    <figure class="profile">
-                        <img src="img/maleicon.jpg " class="user">
-                        <blockquote>WATCH watch watch watches, etc...........</blockquote>
+                        <img src="img/logo_bg.png" alt="ONTime icon" class="user">
+                        <blockquote>Watches in ONtime is just AWESOME!!!!</blockquote>
                         <figure class="star-rating">
                             <i class="fa fa-star" data-rating="1"></i>
                             <i class="fa fa-star" data-rating="2"></i>
@@ -163,10 +117,12 @@ and open the template in the editor.
                         <h2>Aaron <span>Co-Founder of OnTime </span></h2>
                     </figure>
                 </div>
+
                 <div class="col-md-4 text-center">
+
                     <figure class="profile">
-                        <img src="img/femaleicon.jpg " class="user">
-                        <blockquote>WATCH watch watch watches, etc.......WATCH watch watch watches.......</blockquote>
+                        <img src="img/logo_bg.png" alt="ONTime icon" class="user">
+                        <blockquote>Best Watch Shop in Singapore! ONTime! </blockquote>
                         <figure class="star-rating">
                             <i class="fa fa-star" data-rating="1"></i>
                             <i class="fa fa-star" data-rating="2"></i>
@@ -174,13 +130,62 @@ and open the template in the editor.
                             <i class="fa fa-star-half-o" data-rating="4"></i>
                             <i class="fa fa-star-o" data-rating="5"></i>
                         </figure>
+                        <h2>Yee Siang <span>Co-Founder of OnTime </span></h2>
+                    </figure>
+                </div>
+
+                <div class="col-md-4 text-center">
+
+                    <figure class="profile">
+                        <img src="img/logo_bg.png" alt="ONTime icon" class="user">
+                        <blockquote>WATCH watch watch watches, etc............</blockquote>
+                        <figure class="star-rating">
+                            <span class="fa fa-star" data-rating="1"></span>
+                            <span class="fa fa-star" data-rating="2"></span>
+                            <span class="fa fa-star" data-rating="3"></span>
+                            <span class="fa fa-star" data-rating="4"></span>
+                            <span class="fa fa-star-half-o" data-rating="5"></span>
+                        </figure>
+                        <h2>Daniel <span>Co-Founder of OnTime </span></h2>
+                    </figure>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-4 text-center">
+
+                    <figure class="profile">
+                        <img src="img/logo_bg.png" alt="ONTime icon" class="user">
+                        <blockquote>Watches in ONtime is just AWESOME!!!!</blockquote>
+                        <figure class="star-rating">
+                            <i class="fa fa-star" data-rating="1"></i>
+                            <i class="fa fa-star" data-rating="2"></i>
+                            <i class="fa fa-star" data-rating="3"></i>
+                            <i class="fa fa-star" data-rating="4"></i>
+                            <i class="fa fa-star" data-rating="5"></i>
+                        </figure>
+                        <h2>Nikola <span>Co-Founder of OnTime </span></h2>
+                    </figure>
+                </div>
+                <div class="col-md-4 text-center">
+                    <figure class="profile">
+                        <img src="img/logo_bg.png" alt="ONTime icon" class="user">
+                        <blockquote>Best Watch Shop in Singapore! ONTime! </blockquote>
+                        <figure class="star-rating">
+                            <i class="fa fa-star" data-rating="1"></i>
+                            <i class="fa fa-star" data-rating="2"></i>
+                            <i class="fa fa-star" data-rating="3"></i>
+                            <i class="fa fa-star-half-o" data-rating="4"></i>
+                            <i class="fa fa-star-o" data-rating="5"></i>
+                        </figure>
+
                         <h2>Aaron <span>Co-Founder of OnTime </span></h2>
                     </figure>
                 </div>
 
                 <div class="col-md-4 text-center">
                     <figure class="profile">
-                        <img src="img/maleicon.jpg" class="user">
+                        <img src="img/logo_bg.png" alt="ONTime icon" class="user">
                         <blockquote>WATCH watch watch watches, etc............</blockquote>
                         <figure class="star-rating">
                             <i class="fa fa-star" data-rating="1"></i>
@@ -189,40 +194,31 @@ and open the template in the editor.
                             <i class="fa fa-star-half-o" data-rating="4"></i>
                             <i class="fa fa-star-o" data-rating="5"></i>
                         </figure>
-                        <h2>Aaron <span>Co-Founder of OnTime </span></h2>
+                        <h2>Yee Siang <span>Co-Founder of OnTime </span></h2>
                     </figure>
                 </div>
         </section>
     </main>
-
-
-    <nav class="container-fluid footer foot text-center">
-        <a href="ProductPage.html">Home |</a>
-        <a href="">Browse |</a>
-        <a href="">Search </a>
-        <p><i>Copyright &copy; 2014 Share Your Travel</i></p>
-    </nav>
 
     <footer class="footer">
         <section class=container>
             <section class="row">
                 <section class="col-md-4">
                     <h1>Company</h1>
-                    <p>About Us</p>
-                    <a href="">
+                    <a href="aboutus.html">
+                        <p>About Us</p>
+                    </a>
+                    <a href="aboutus.html">
                         <p>Contact Us</p>
                     </a>
                 </section>
 
                 <section class="col-md-4">
                     <h1>Customer Support</h1>
-                    <a href="">
+                    <a href="customerservice.html#FAQ">
                         <p>FAQ</p>
                     </a>
-                    <a href="">
-                        <p>Contact Us</p>
-                    </a>
-                    <a href="">
+                    <a href="customerservice.html">
                         <p>Customer Service</p>
                     </a>
                 </section>
