--- a/ONtime/public_html/products.html
+++ b/ONtime/public_html/products.html
@@ -241,7 +241,7 @@ and open the template in the editor.
                         <i class="fa fa-eye"></i></button>
                     <button class="btn btn-secondary" title="Add to wishlist">
                         <i class="fa fa-heart-o"></i></button>
-                    <button class="btn btn-secondary" title="Add to Cart">
+                    <a href="shoppingcart.html"><button class="btn btn-secondary" title="Add to Cart"></a>
                         <i class="fa fa-shopping-cart"></i></button>
                 </figure>
                 <figure class="star-rating">
