--- a/ONtime/public_html/productsreview.html
+++ b/ONtime/public_html/productsreview.html
@@ -80,6 +80,7 @@ and open the template in the editor.
         <section>
             <div class="container" id="productreview">
                 <!--Responsive Form CSS - https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_responsive_form -->
+                    <!-- w3schools js validation, https://www.w3schools.com/js/js_validation.asp -->
                 <form name="productreview" action="productsreview.html" method="post" onsubmit="return validateform()">
 
                     <div class="row">
@@ -99,7 +100,7 @@ and open the template in the editor.
             </div>
         </section>
 
-        <!--bootstrap -->
+        <!-- review URL = https://www.youtube.com/watch?v=qZno3Yk8QKc&t=500s Author = Easy Tutorials -->
         <section class="container">
             <div class="row">
                 <div class="col-md-4 text-center">
@@ -199,7 +200,7 @@ and open the template in the editor.
                 </div>
         </section>
     </main>
-
+    <!-- review URL = https://www.youtube.com/watch?v=qZno3Yk8QKc&t=500s Author = Easy Tutorials -->
     <footer class="footer">
         <section class=container>
             <section class="row">
