--- a/ONtime/public_html/products.html
+++ b/ONtime/public_html/products.html
@@ -119,7 +119,7 @@ and open the template in the editor.
         </section>
 
     <!--Product Card  W3school URL https://www.w3schools.com/howto/howto_css_product_card.asp  
-        all images source from Cocomi.com URL = https://www.cocomi.com/ -->
+        all image sources are from Cocomi.com URL = https://www.cocomi.com/-->
         <div class="row">
          
             <div class="col-md-3">
@@ -144,7 +144,7 @@ and open the template in the editor.
                         <i class="fa fa-star" data-rating="2"></i>
                         <i class="fa fa-star " data-rating="3"></i>
                         <i class="fa fa-star" data-rating="4"></i>
-                        <i class="fa fa-star" data-rating="5"></i>
+                        <i class="fa fa-star-half-o" data-rating="5"></i>
                     </figure>
                 </figure>
             </div>
@@ -168,8 +168,8 @@ and open the template in the editor.
                         <i class="fa fa-star" data-rating="1"></i>
                         <i class="fa fa-star" data-rating="2"></i>
                         <i class="fa fa-star " data-rating="3"></i>
-                        <i class="fa fa-star" data-rating="4"></i>
-                        <i class="fa fa-star" data-rating="5"></i>
+                        <i class="fa fa-star-o" data-rating="4"></i>
+                        <i class="fa fa-star-o" data-rating="5"></i>
                     </figure>
                 </figure>
             </div>
@@ -193,7 +193,7 @@ and open the template in the editor.
                         <i class="fa fa-star" data-rating="2"></i>
                         <i class="fa fa-star " data-rating="3"></i>
                         <i class="fa fa-star" data-rating="4"></i>
-                        <i class="fa fa-star" data-rating="5"></i>
+                        <i class="fa fa-star-half-o" data-rating="5"></i>
                     </figure>
                 </figure>
             </div>
@@ -249,7 +249,7 @@ and open the template in the editor.
                     <i class="fa fa-star" data-rating="2"></i>
                     <i class="fa fa-star " data-rating="3"></i>
                     <i class="fa fa-star" data-rating="4"></i>
-                    <i class="fa fa-star" data-rating="5"></i>
+                    <i class="fa fa-star-o" data-rating="5"></i>
                 </figure>
             </figure>
         </div>
@@ -273,7 +273,7 @@ and open the template in the editor.
                     <i class="fa fa-star" data-rating="2"></i>
                     <i class="fa fa-star " data-rating="3"></i>
                     <i class="fa fa-star" data-rating="4"></i>
-                    <i class="fa fa-star" data-rating="5"></i>
+                    <i class="fa fa-star-o" data-rating="5"></i>
                 </figure>
             </figure>
         </div>
@@ -296,8 +296,8 @@ and open the template in the editor.
                     <i class="fa fa-star" data-rating="1"></i>
                     <i class="fa fa-star" data-rating="2"></i>
                     <i class="fa fa-star " data-rating="3"></i>
-                    <i class="fa fa-star" data-rating="4"></i>
-                    <i class="fa fa-star" data-rating="5"></i>
+                    <i class="fa fa-star-half-o" data-rating="4"></i>
+                    <i class="fa fa-star-o" data-rating="5"></i>
                 </figure>
             </figure>
         </div>
