--- a/ONtime/public_html/products.html
+++ b/ONtime/public_html/products.html
@@ -100,7 +100,10 @@ and open the template in the editor.
                     <i class="glyphicon glyphicon-chevron-left"></i>
                     <i class="sr-only">Previous</i>
                 </a>
-                
+                <a class="right carousel-control" href="#slider" data-slide="next">
+                    <i class="glyphicon glyphicon-chevron-right"></i>
+                    <i class="sr-only">Next</i>
+                </a>
             </div>
         </div>
     </section>
